// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addOrderToDB 1`] = `
Array [
  Array [
    Object {
      "orderHash": "0xOrderHash",
      "signedOrder": Object {
        "exchangeAddress": "exchangeAddress",
        "expirationTimeSeconds": "1234567890",
        "feeRecipientAddress": "feeRecipientAddress",
        "makerAddress": "makerAddress",
        "makerAssetAmount": "123",
        "makerAssetData": "makerAssetData",
        "makerFee": "0",
        "salt": "789",
        "senderAddress": "senderAddress",
        "signature": "signature",
        "takerAddress": "takerAddress",
        "takerAssetAmount": "456",
        "takerAssetData": "takerAssetData",
        "takerFee": "0",
      },
    },
  ],
]
`;

exports[`addOrderToDB 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`addOrderToDB 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
      "status": "confirmed",
      "type": "add",
      "updatedBy": "orderProcessor",
    },
  ],
]
`;

exports[`addOrderToDB no order 1`] = `
Array [
  Array [
    "orders|add",
  ],
]
`;

exports[`cancelOrderInDB 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`cancelOrderInDB 2`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
    },
  ],
]
`;

exports[`cancelOrderInDB 3`] = `
Array [
  Array [
    Object {
      "account": "0xAccount",
      "amount": 456,
      "currentSequence": 2,
      "initialSequence": 1,
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "price": 0.123456789,
      "side": "bid",
      "status": "confirmed",
      "type": "cancel",
      "updatedBy": "orderProcessor",
    },
  ],
]
`;

exports[`cancelOrderInDB no order 1`] = `
Array [
  Array [
    "orders|cancel",
  ],
]
`;

exports[`getLiveOrder 1`] = `
Object {
  "account": "makerAddress",
  "amount": 123,
  "currentSequence": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 0.26973684,
  "side": "bid",
}
`;

exports[`getLiveOrder 2`] = `
Object {
  "account": "takerAddress",
  "amount": 456,
  "currentSequence": 0,
  "initialSequence": 0,
  "orderHash": "0xOrderHash",
  "pair": "pair",
  "price": 3.70731707,
  "side": "ask",
}
`;

exports[`parseSignedOrder 1`] = `
Object {
  "exchangeAddress": "exchangeAddress",
  "expirationTimeSeconds": "1234567890",
  "feeRecipientAddress": "feeRecipientAddress",
  "makerAddress": "makerAddress",
  "makerAssetAmount": "123",
  "makerAssetData": "makerAssetData",
  "makerFee": "0",
  "salt": "789",
  "senderAddress": "senderAddress",
  "signature": "signature",
  "takerAddress": "takerAddress",
  "takerAssetAmount": "456",
  "takerAssetData": "takerAssetData",
  "takerFee": "0",
}
`;
